# InstanceSegmentationFromParticleHolograms

./: .gitignore  Dockerfile  LICENSE  README.md  paper_figures.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
config/: base-holodino.yaml  holodino-large.yaml  holodino-small.yaml
data/: model_diagram.drawio  output_data.csv  wd_focused.tif  wd_inference.tif
datasets/dentalparticles/: dentalparticles.json
datasets/fakeholo_hard/: cfg.json
datasets/waterdroplets/: waterdroplets.json
fakeholo/: __main__.py  data.py  exporter.py  generator.py  server.py  synthesis.py  utils.py
holodino/: __init__.py  __main__.py  config.py  dataset.py  filters.py  inference.py  overrides.py  reconstructor.py  scheduler.py  trainer.py
holodino/modeling/: __init__.py
holodino/modeling/backbone/: __init__.py  separable_resnet.py
samples/: labels.csv
scripts/: maskdino_setup.py
tests/: common.py  test_environment.py  test_generator.py  test_server.py  test_synthesis.py  test_trainer.py
