[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "holodino"
version = "1.0.0"
authors = [
    { name = "Corey Senger", email = "senge050@umn.edu" }
]
description = "HoloDINO: Instance segmentation for particle holograms"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "detectron2",
    "maskdino",
    "flask",
    "pandas",
    "more_itertools",
    "typer",
    "backoff"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["holodino", "holodino.*", "fakeholo"]
